# SinglishChatbotReact

./: README.md  code.txt
backend/: .env  demo.py  pyproject.toml
backend/app/: crud.py  database.py  main.py  models.py  schemas.py
backend/fastenv/: pyvenv.cfg
backend/src/: app.py  qdrant.py
singlishchatbot/: .env  package-lock.json  package.json
singlishchatbot/src/pages/: index.js
