[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Aanish Rizmy <aanishrizmy28@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.113.0"
uvicorn = "^0.30.6"
langchain = "^0.2.16"
qdrant-client = "^1.11.1"
langchain-community = "^0.2.16"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
